ci: include go.mod in workflow triggers for main branch

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -9,10 +9,12 @@ on:
     branches: ['main']
     paths:
       - '**/*.go'
+      - 'go.mod'
   pull_request:
     branches: ['main']
     paths:
       - '**/*.go'
+      - 'go.mod'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
